fix map on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -682,6 +682,10 @@ video {
   height: 100vh;
 }
 
+.h-full {
+  height: 100%;
+}
+
 .w-8 {
   width: 2rem;
 }
